# transportal

./: .gitmodules  COPYRIGHT  Cargo.toml  README.md
docs/: publishing.md
src/: config.rs  macros.rs  main.rs  middleware.rs  session.rs  template_helpers.rs  unix_sock.rs
src/transmission/: rpc.rs  types.rs
static/app/: manifest.json
static/css/: base.css  index.css
static/js/: htmx.js  sse.js
templates/: add-torrent.html  base.html  index.html  login.html  torrent.html
templates/partials/: torrent-list.html  torrent.html
templates/stubs/: torrent-list.html  torrent.html
